@@ -1143,8 +1143,8 @@ and the text of $3 pages.",
 'prevn'			=> "previous $1",
 'nextn'			=> "next $1",
 'viewprevnext'	=> "View ($1) ($2) ($3).",
-'showingresults' => "Showing below up to <b>$1</b> results starting with #<b>$2</b>.",
-'showingresultsnum' => "Showing below <b>$3</b> results starting with #<b>$2</b>.",
+'showingresults' => "Showing below up to {{PLURAL:$1|'''1''' result|'''$1''' results}} starting with #'''$2'''.",
+'showingresultsnum' => "Showing below {{PLURAL:$3|'''1''' result|'''$3''' results}} starting with #'''$2'''.",
 'nonefound'		=> "'''Note''': Unsuccessful searches are
 often caused by searching for common words like \"have\" and \"from\",
 which are not indexed, or by specifying more than one search term (only pages
